<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/background_light"
    tools:context=".ui.view.SettingsActivity">

    <!-- Header -->
    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="24dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:paddingStart="10dp"
            android:src="@drawable/ic_arrow_back"
            android:background="@drawable/bg_circle_button_semi"
            app:tint="@color/text_secondary_light"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/configuraci_n_y_recordatorios"
            android:textSize="18sp"
            android:textColor="@color/text_light"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"/>

        <View
            android:layout_width="40dp"
            android:layout_height="40dp"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/llHeader"
        app:layout_constraintBottom_toTopOf="@id/btnSave">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <!-- Daily Reminders Card -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="12dp"
                app:cardBackgroundColor="@color/surface_light"
                android:layout_margin="2dp"
                app:cardElevation="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:gravity="center_vertical">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recordatorios_diarios"
                            android:textSize="16sp"
                            android:textColor="@color/text_light"
                            android:fontFamily="@font/poppins_semibold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recibe_una_notificaci_n_cada_d_a"
                            android:textSize="14sp"
                            android:textColor="@color/text_secondary_light"
                            android:fontFamily="@font/poppins_light"
                            android:layout_marginTop="4dp"/>
                    </LinearLayout>

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switchDailyReminders"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        app:thumbTint="@color/white"
                        app:trackTint="@color/primary"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Reminder Time Card -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="12dp"
                app:cardBackgroundColor="@color/surface_light"
                app:cardElevation="1dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:enabled="false"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hora_del_recordatorio"
                        android:textSize="16sp"
                        android:textColor="@color/text_light"
                        android:fontFamily="@font/poppins_semibold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/elige_cu_ndo_quieres_que_te_lo_recordemos"
                        android:textSize="14sp"
                        android:textColor="@color/text_secondary_light"
                        android:fontFamily="@font/poppins_light"
                        android:layout_marginTop="4dp"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilReminderTime"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxBackgroundColor="#F5F5F5"
                        app:boxCornerRadiusTopStart="12dp"
                        app:boxCornerRadiusTopEnd="12dp"
                        app:boxCornerRadiusBottomStart="12dp"
                        app:boxCornerRadiusBottomEnd="12dp"
                        android:layout_marginTop="16dp">

                        <AutoCompleteTextView
                            android:id="@+id/actvReminderTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:text="09:00 AM"
                            android:textSize="16sp"
                            android:fontFamily="@font/poppins_medium"
                            android:paddingVertical="16dp"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <!-- Btn guardar -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="24dp"
        android:text="@string/guardar_cambios"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_semibold"
        app:backgroundTint="#84A98C"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>